# OS

./: .gitignore  CPUID.asm  binaries.asm  bootloader.asm  bootloader.elf  gdt_64.asm  idt.asm  linker.ld  makefile  paging.asm  print.asm  readDisk.asm  readDiskviaPorts.asm  rootfile.tar  secondStage.asm  start.sh
kernel/: Cargo.toml  target.json
kernel/.cargo/: config.toml
kernel/src/: PIC8259.rs  cli.rs  filesystem.rs  heap.rs  idt.rs  io_ports.rs  isr_handlers.rs  keyboard.rs  lib.rs  serial.rs  tar_driver.rs  temp.rs  vga_buffer.rs
root/: ala.txt  data.txt  haha.txt  hejkanaklejka.txt  list.txt
root/directory/: hello.txt
