[package]
name = "rust-os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true